WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299049
LocalFrame::setPrinting doesn't set printing state on remote frame children
https://bugs.webkit.org/show_bug.cgi?id=299049
Summary
LocalFrame::setPrinting doesn't set printing state on remote frame children
Matt Woodrow
Reported
2025-09-17 15:27:11 PDT
This is needed for site-isolation printing to work correctly
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-17 15:27:18 PDT
<
rdar://problem/160808134
>
Matt Woodrow
Comment 2
2025-09-17 15:33:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50890
EWS
Comment 3
2025-09-23 01:37:19 PDT
Committed
300374@main
(e58064d5589f): <
https://commits.webkit.org/300374@main
> Reviewed commits have been landed. Closing PR #50890 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug