Source/WebCore/page/Frame.cpp
@@ -338,4 +338,16 @@ bool Frame::frameCanCreatePaymentSession() const
     return m_frameTreeSyncData->frameCanCreatePaymentSession;
 }
 
+bool Frame::isPrinting() const
+{
+    return m_isPrinting;
+}
+
+void Frame::setPrinting(bool printing, FloatSize pageSize, FloatSize originalPageSize, float maximumShrinkRatio, AdjustViewSize shouldAdjustViewSize, NotifyUIProcess notifyUIProcess)
+{
+    m_isPrinting = printing;
+    if (notifyUIProcess == NotifyUIProcess::Yes && m_settings->siteIsolationEnabled())
+        loaderClient().setPrinting(printing, pageSize, originalPageSize, maximumShrinkRatio, shouldAdjustViewSize);
+}
+
 } // namespace WebCore
